--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "local-storage": "^2.0.0",
     "lucide-react": "^0.246.0",
     "next": "13.4.6",
     "next-themes": "^0.2.1",
