--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
-    "local-storage": "^2.0.0",
     "lucide-react": "^0.246.0",
     "next": "13.4.6",
     "next-themes": "^0.2.1",
@@ -32,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
+    "swr": "^2.2.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
