Change architecture to monorepo

--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -2,8 +2,8 @@
   "style": "default",
   "rsc": true,
   "tailwind": {
-    "config": "tailwind.config.js",
-    "css": "styles/globals.css",
+    "config": "apps/web/tailwind.config.js",
+    "css": "apps/web/styles/globals.css",
     "baseColor": "slate",
     "cssVariables": true
   },
