--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "turbo run build",
     "start": "turbo run start",
     "lint": "turbo run lint",
-    "shadcn-add": "npx --workspace=web shadcn-ui@latest add"
+    "shadcn-add": "npx --workspace=web shadcn-ui@latest add",
+    "workspace-add": "turbo gen workspace"
   },
   "workspaces": [
     "apps/*",
