--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,8 @@
     "dev": {
       "cache": false,
       "persistent": true
-    }
+    },
+    "test": {},
+    "test:watch": { "cache": false }
   }
 }
