--- a/.github/workflows/prebuild.yaml
+++ b/.github/workflows/prebuild.yaml
@@ -7,6 +7,7 @@ on:
       - "main"
 jobs:
   prebuild:
+    name: "prebuild"
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
@@ -19,3 +20,16 @@ jobs:
         run: npm run lint
       - name: Test
         run: npm run test
+  build:
+    name: "build"
+    needs: prebuild
+    runs-on: macos-12
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "16.17.0"
+      - name: Install dependencies
+        run: npm ci
+      - name: build
+        run: npm run build
