--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: prebuild
+name: ci
 run-name: ${{github.job}}-run
 on:
   pull_request:
@@ -6,8 +6,7 @@ on:
     branches:
       - "main"
 jobs:
-  prebuild:
-    name: "prebuild"
+  ci-job:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
@@ -20,16 +19,5 @@ jobs:
         run: npm run lint
       - name: Test
         run: npm run test
-  build:
-    name: "build"
-    needs: prebuild
-    runs-on: macos-12
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "16.17.0"
-      - name: Install dependencies
-        run: npm ci
-      - name: build
+      - name: Build
         run: npm run build
