add ci on main branch merge

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,9 @@
 name: ci
 run-name: ${{github.job}}-run
 on:
+  push:
+    branches:
+      - "main"
   pull_request:
     types: [opened, synchronize]
     branches:
