--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,6 +49,7 @@
     "eslint-config-prettier": "^8.8.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "msw": "^1.2.2",
     "prettier": "2.8.8"
   }
 }
